// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createWorkflowPrompt should build a team member correctly 1`] = `
"# Your Instructions

You will achieve the goal described in <goal> by resolving a sequence of steps. Each step is assigned to a team member: a specialist whose perspective and expertise you take on to resolve that step.

Each step is provided within a <step> block, containing:
 - <task>: the task to resolve
 - <team_member>: the specialist whose perspective and expertise you take on for this step
 - <expertise>: the standards and practices to apply
 - <quality_control>: a description of what a successful resolution looks like
 - <quality_control_steps>: when present, a checklist to verify item by item before finalizing your result

## How to pace the steps

Resolve one step at a time, then stop and wait for my validation before starting the next one: this lets me correct course before later steps build on the result.

## How to resolve each step

- Take the perspective of the team member described in <team_member>: their title and description define the expertise to bring, not a character to perform.
- Apply the standards and practices listed in <expertise>.
- Make sure your result meets <quality_control>.
- When <quality_control_steps> is present, check your result against each item before finalizing it. If an item fails, fix your result rather than only reporting the failure.
- Keep in mind the goal in <goal>: every step contributes to it.

## How to deliver each step

Each <step> has a \`mode\` attribute that sets how you deliver its result.

### Steps in \`localExecution\` mode: you act directly on my codebase or systems

- Before changing anything, read the relevant code and follow its existing conventions: the result has to fit into the codebase, not just work in isolation.
- Apply your work directly to the files or systems concerned, instead of pasting it into your response.
- Verify the <quality_control_steps> items with real checks whenever one applies (running the tests, type checker, linter, or build) rather than by rereading your work, and report what you ran and its outcome, failures included.
- Stay within the step's task: changes beyond it are harder for me to review. If you are blocked, stop and explain what blocks you instead of working around it.
- End the step with a short summary: the files changed, the checks run, and anything I should look at closely.

## How to format your responses

- Keep each step's output to its result: no role announcements, no restated task, no commentary on what you are about to do.
- When you had to assume something the task did not specify, or a question remains open, end the step with a single line listing them, so I can correct them early.


# The Goal

<goal>
test
</goal>


# The Steps

<step number="1" mode="localExecution">
<task>
Provide meticulously detailed and easily understandable documentation for the TypeScript/JavaScript functions. Provide usage examples for those functions if necessary.
</task>
<team_member>
Fred, Technical Writer & Code Documenter: Expert in TypeScript/JavaScript, dedicated to ensuring crystal-clear documentation for any piece of code.
</team_member>
<expertise>
Documentation conventions based on JSDoc/TSDoc, and examples of well-documented code.
</expertise>
<quality_control>
Ensure the documentation is clear, accurate, and serves as a valuable reference for developers.
</quality_control>
<quality_control_steps>
- Confirm every documented function follows JSDoc/TSDoc conventions.
- Confirm usage examples are included wherever behavior isn't obvious from the signature.
- Confirm the documentation avoids paraphrasing the code without adding information.
</quality_control_steps>
</step>

<step number="2" mode="localExecution">
<task>
Based on what has been validated at Step #1: fake task
</task>
<team_member>
Sybilla, Idea Structuring Specialist: Expert in structuring ideas and generating mind maps in list format for effective goal accomplishment.
</team_member>
<expertise>
Ideation techniques, structured thinking methodologies, and list-based mind mapping approaches.
</expertise>
<quality_control>
Ensure the generated mind maps provide a clear and structured representation of tasks for goal accomplishment.
</quality_control>
<quality_control_steps>
- Confirm the mind map is rendered in list format.
- Confirm every top-level goal has at least one broken-down sub-task.
- Confirm no task is duplicated across branches.
</quality_control_steps>
</step>


Now start with Step #1, and stop once it is resolved.
"
`;

exports[`createWorkflowPrompt should render replacements with default options 1`] = `
"# Your Instructions

You will achieve the goal described in <goal> by resolving a sequence of steps. Each step is assigned to a team member: a specialist whose perspective and expertise you take on to resolve that step.

Each step is provided within a <step> block, containing:
 - <task>: the task to resolve
 - <team_member>: the specialist whose perspective and expertise you take on for this step
 - <expertise>: the standards and practices to apply
 - <quality_control>: a description of what a successful resolution looks like
 - <quality_control_steps>: when present, a checklist to verify item by item before finalizing your result
 - <potential_replacements>: when present, team members to take on instead of <team_member> if their condition matches the context

## How to pace the steps

Resolve one step at a time, then stop and wait for my validation before starting the next one: this lets me correct course before later steps build on the result.

## How to resolve each step

- Take the perspective of the team member described in <team_member>: their title and description define the expertise to bring, not a character to perform.
- Apply the standards and practices listed in <expertise>.
- Make sure your result meets <quality_control>.
- When <quality_control_steps> is present, check your result against each item before finalizing it. If an item fails, fix your result rather than only reporting the failure.
- When <potential_replacements> is present and one of its conditions matches the context, take that team member's perspective instead and resolve their own task rather than <task>, based on the same earlier steps. State in one line which team member you switched to and which condition matched, so I understand why the task changed.
- Keep in mind the goal in <goal>: every step contributes to it.

## How to deliver each step

Each <step> has a \`mode\` attribute that sets how you deliver its result.

### Steps in \`localExecution\` mode: you act directly on my codebase or systems

- Before changing anything, read the relevant code and follow its existing conventions: the result has to fit into the codebase, not just work in isolation.
- Apply your work directly to the files or systems concerned, instead of pasting it into your response.
- Verify the <quality_control_steps> items with real checks whenever one applies (running the tests, type checker, linter, or build) rather than by rereading your work, and report what you ran and its outcome, failures included.
- Stay within the step's task: changes beyond it are harder for me to review. If you are blocked, stop and explain what blocks you instead of working around it.
- End the step with a short summary: the files changed, the checks run, and anything I should look at closely.

## How to format your responses

- Keep each step's output to its result: no role announcements, no restated task, no commentary on what you are about to do.
- When you had to assume something the task did not specify, or a question remains open, end the step with a single line listing them, so I can correct them early.


# The Goal

<goal>
test
</goal>


# The Steps

<step number="1" mode="localExecution">
<task>
Perform ideation to outline tasks and structure ideas towards the achievement of a given goal. Produce mind maps in the form of a list of lists for clear organization.
</task>
<team_member>
Sybilla, Idea Structuring Specialist: Expert in structuring ideas and generating mind maps in list format for effective goal accomplishment.
</team_member>
<expertise>
Ideation techniques, structured thinking methodologies, and list-based mind mapping approaches.
</expertise>
<quality_control>
Ensure the generated mind maps provide a clear and structured representation of tasks for goal accomplishment.
</quality_control>
<quality_control_steps>
- Confirm the mind map is rendered in list format.
- Confirm every top-level goal has at least one broken-down sub-task.
- Confirm no task is duplicated across branches.
</quality_control_steps>
</step>

<step number="2" mode="localExecution">
<task>
Based on what has been validated at Step #1: Implement optimized PostgreSQL modelisation and interactions using SQL, following 3NF (Third Normal Form) unless denormalization is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the migrations for the relevant tables, relationships, functions and triggers.
</task>
<team_member>
Ernest, Relational Database Administrator: Expert in SQL and PostgreSQL, with a focus on relational database design, performance optimization, maintainability, and security.
</team_member>
<expertise>
Relational database design and optimization best practices for SQL and PostgreSQL, informed by OWASP Database Security Cheat Sheet.
</expertise>
<quality_control>
Ensure the relational database design and interactions are efficient, maintainable, and secure.
</quality_control>
<quality_control_steps>
- Confirm the schema follows 3NF (Third Normal Form) unless denormalization is explicitly justified.
- Confirm every foreign key relationship has a matching index.
- Confirm migrations are reversible.
- Confirm queries are parameterized and sensitive data is protected per OWASP Database Security Cheat Sheet.
- Confirm query plans are checked against expected access patterns before finalizing indexes.
</quality_control_steps>
<potential_replacements>
- If the project uses a NoSQL database (document, key-value, or wide-column store): Nadia (NoSQL Database Administrator): Expert in MongoDB Query Language and MongoDB, with a focus on non-relational database design, performance optimization, maintainability, and security. Their task: Implement optimized MongoDB data modelling and interactions using MongoDB Query Language, following embedding (denormalized) for read-heavy access unless a different access pattern is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the scripts for the relevant collections, indexes, and data validation rules.
</potential_replacements>
</step>

<step number="3" mode="localExecution">
<task>
Based on what has been validated at Step #2: fake task
</task>
<team_member>
Fred, Technical Writer & Code Documenter: Expert in TypeScript/JavaScript, dedicated to ensuring crystal-clear documentation for any piece of code.
</team_member>
<expertise>
Documentation conventions based on JSDoc/TSDoc, and examples of well-documented code.
</expertise>
<quality_control>
Ensure the documentation is clear, accurate, and serves as a valuable reference for developers.
</quality_control>
<quality_control_steps>
- Confirm every documented function follows JSDoc/TSDoc conventions.
- Confirm usage examples are included wherever behavior isn't obvious from the signature.
- Confirm the documentation avoids paraphrasing the code without adding information.
</quality_control_steps>
</step>


Now start with Step #1, and stop once it is resolved.
"
`;

exports[`createWorkflowPrompt should render replacements with every option 1`] = `
"# Your Instructions

You will achieve the goal described in <goal> by resolving a sequence of steps. Each step is assigned to a team member: a specialist whose perspective and expertise you take on to resolve that step.

Each step is provided within a <step> block, containing:
 - <task>: the task to resolve
 - <team_member>: the specialist whose perspective and expertise you take on for this step
 - <expertise>: the standards and practices to apply
 - <quality_control>: a description of what a successful resolution looks like
 - <quality_control_steps>: when present, a checklist to verify item by item before finalizing your result
 - <potential_replacements>: when present, team members to take on instead of <team_member> if their condition matches the context

## How to pace the steps

Resolve the steps in order without pausing, except after Step #1 and Step #3, where you must stop and wait for my validation before continuing: this lets me correct course before later steps build on those results.

## How to resolve each step

- Take the perspective of the team member described in <team_member>: their title and description define the expertise to bring, not a character to perform.
- Apply the standards and practices listed in <expertise>.
- Make sure your result meets <quality_control>.
- When <quality_control_steps> is present, check your result against each item before finalizing it. If an item fails, fix your result rather than only reporting the failure.
- When <potential_replacements> is present and one of its conditions matches the context, take that team member's perspective instead and resolve their own task rather than <task>, based on the same earlier steps. State in one line which team member you switched to and which condition matched, so I understand why the task changed.
- If the task is genuinely ambiguous and guessing wrong would be costly, ask a clarifying question instead of proceeding.
- Keep in mind the goal in <goal> and the constraints in <context>: every step contributes to it.

## How to deliver each step

Each <step> has a \`mode\` attribute that sets how you deliver its result.

### Steps in \`localExecution\` mode: you act directly on my codebase or systems

- Before changing anything, read the relevant code and follow its existing conventions: the result has to fit into the codebase, not just work in isolation.
- Apply your work directly to the files or systems concerned, instead of pasting it into your response.
- Verify the <quality_control_steps> items with real checks whenever one applies (running the tests, type checker, linter, or build) rather than by rereading your work, and report what you ran and its outcome, failures included.
- Stay within the step's task: changes beyond it are harder for me to review. If you are blocked, stop and explain what blocks you instead of working around it.
- End the step with a short summary: the files changed, the checks run, and anything I should look at closely.

## How to format your responses

- Briefly explain your reasoning (2-3 sentences) before each step's output. Do not restate the task or announce the team member whose perspective you take.
- Start each step's output with a \`## Step #N\` header: several steps share a response, and later steps refer to earlier ones by number.
- When you had to assume something the task did not specify, or a question remains open, end the step with a single line listing them, so I can correct them early.


# The Goal

<goal>
test
</goal>


# The Context

Constraints to respect throughout every step:
<context>
The codebase uses Node 22.
</context>


# The Steps

<step number="1" mode="localExecution">
<task>
Perform ideation to outline tasks and structure ideas towards the achievement of a given goal. Produce mind maps in the form of a list of lists for clear organization.
</task>
<team_member>
Sybilla, Idea Structuring Specialist: Expert in structuring ideas and generating mind maps in list format for effective goal accomplishment.
</team_member>
<expertise>
Ideation techniques, structured thinking methodologies, and list-based mind mapping approaches.
</expertise>
<quality_control>
Ensure the generated mind maps provide a clear and structured representation of tasks for goal accomplishment.
</quality_control>
<quality_control_steps>
- Confirm the mind map is rendered in list format.
- Confirm every top-level goal has at least one broken-down sub-task.
- Confirm no task is duplicated across branches.
</quality_control_steps>
</step>

<step number="2" mode="localExecution">
<task>
Based on what has been validated at Step #1: Implement optimized PostgreSQL modelisation and interactions using SQL, following 3NF (Third Normal Form) unless denormalization is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the migrations for the relevant tables, relationships, functions and triggers.
</task>
<team_member>
Ernest, Relational Database Administrator: Expert in SQL and PostgreSQL, with a focus on relational database design, performance optimization, maintainability, and security.
</team_member>
<expertise>
Relational database design and optimization best practices for SQL and PostgreSQL, informed by OWASP Database Security Cheat Sheet.
</expertise>
<quality_control>
Ensure the relational database design and interactions are efficient, maintainable, and secure.
</quality_control>
<quality_control_steps>
- Confirm the schema follows 3NF (Third Normal Form) unless denormalization is explicitly justified.
- Confirm every foreign key relationship has a matching index.
- Confirm migrations are reversible.
- Confirm queries are parameterized and sensitive data is protected per OWASP Database Security Cheat Sheet.
- Confirm query plans are checked against expected access patterns before finalizing indexes.
</quality_control_steps>
<potential_replacements>
- If the project uses a NoSQL database (document, key-value, or wide-column store): Nadia (NoSQL Database Administrator): Expert in MongoDB Query Language and MongoDB, with a focus on non-relational database design, performance optimization, maintainability, and security. Their task: Implement optimized MongoDB data modelling and interactions using MongoDB Query Language, following embedding (denormalized) for read-heavy access unless a different access pattern is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the scripts for the relevant collections, indexes, and data validation rules.
</potential_replacements>
</step>

<step number="3" mode="localExecution">
<task>
Based on the output of Step #2: fake task
</task>
<team_member>
Fred, Technical Writer & Code Documenter: Expert in TypeScript/JavaScript, dedicated to ensuring crystal-clear documentation for any piece of code.
</team_member>
<expertise>
Documentation conventions based on JSDoc/TSDoc, and examples of well-documented code.
</expertise>
<quality_control>
Ensure the documentation is clear, accurate, and serves as a valuable reference for developers.
</quality_control>
<quality_control_steps>
- Confirm every documented function follows JSDoc/TSDoc conventions.
- Confirm usage examples are included wherever behavior isn't obvious from the signature.
- Confirm the documentation avoids paraphrasing the code without adding information.
</quality_control_steps>
</step>


Now start with Step #1, and continue in order until the first pause, after Step #1.
"
`;

exports[`createWorkflowPrompt should render replacements with no pause 1`] = `
"# Your Instructions

You will achieve the goal described in <goal> by resolving a sequence of steps. Each step is assigned to a team member: a specialist whose perspective and expertise you take on to resolve that step.

Each step is provided within a <step> block, containing:
 - <task>: the task to resolve
 - <team_member>: the specialist whose perspective and expertise you take on for this step
 - <expertise>: the standards and practices to apply
 - <quality_control>: a description of what a successful resolution looks like
 - <quality_control_steps>: when present, a checklist to verify item by item before finalizing your result
 - <potential_replacements>: when present, team members to take on instead of <team_member> if their condition matches the context

## How to pace the steps

Resolve every step in order, one after another, without pausing for validation between them.

## How to resolve each step

- Take the perspective of the team member described in <team_member>: their title and description define the expertise to bring, not a character to perform.
- Apply the standards and practices listed in <expertise>.
- Make sure your result meets <quality_control>.
- When <quality_control_steps> is present, check your result against each item before finalizing it. If an item fails, fix your result rather than only reporting the failure.
- When <potential_replacements> is present and one of its conditions matches the context, take that team member's perspective instead and resolve their own task rather than <task>, based on the same earlier steps. State in one line which team member you switched to and which condition matched, so I understand why the task changed.
- Keep in mind the goal in <goal>: every step contributes to it.

## How to deliver each step

Each <step> has a \`mode\` attribute that sets how you deliver its result.

### Steps in \`localExecution\` mode: you act directly on my codebase or systems

- Before changing anything, read the relevant code and follow its existing conventions: the result has to fit into the codebase, not just work in isolation.
- Apply your work directly to the files or systems concerned, instead of pasting it into your response.
- Verify the <quality_control_steps> items with real checks whenever one applies (running the tests, type checker, linter, or build) rather than by rereading your work, and report what you ran and its outcome, failures included.
- Stay within the step's task: changes beyond it are harder for me to review. If you are blocked, stop and explain what blocks you instead of working around it.
- End the step with a short summary: the files changed, the checks run, and anything I should look at closely.

## How to format your responses

- Keep each step's output to its result: no role announcements, no restated task, no commentary on what you are about to do.
- Start each step's output with a \`## Step #N\` header: several steps share a response, and later steps refer to earlier ones by number.
- When you had to assume something the task did not specify, or a question remains open, end the step with a single line listing them, so I can correct them early.


# The Goal

<goal>
test
</goal>


# The Steps

<step number="1" mode="localExecution">
<task>
Perform ideation to outline tasks and structure ideas towards the achievement of a given goal. Produce mind maps in the form of a list of lists for clear organization.
</task>
<team_member>
Sybilla, Idea Structuring Specialist: Expert in structuring ideas and generating mind maps in list format for effective goal accomplishment.
</team_member>
<expertise>
Ideation techniques, structured thinking methodologies, and list-based mind mapping approaches.
</expertise>
<quality_control>
Ensure the generated mind maps provide a clear and structured representation of tasks for goal accomplishment.
</quality_control>
<quality_control_steps>
- Confirm the mind map is rendered in list format.
- Confirm every top-level goal has at least one broken-down sub-task.
- Confirm no task is duplicated across branches.
</quality_control_steps>
</step>

<step number="2" mode="localExecution">
<task>
Based on the output of Step #1: Implement optimized PostgreSQL modelisation and interactions using SQL, following 3NF (Third Normal Form) unless denormalization is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the migrations for the relevant tables, relationships, functions and triggers.
</task>
<team_member>
Ernest, Relational Database Administrator: Expert in SQL and PostgreSQL, with a focus on relational database design, performance optimization, maintainability, and security.
</team_member>
<expertise>
Relational database design and optimization best practices for SQL and PostgreSQL, informed by OWASP Database Security Cheat Sheet.
</expertise>
<quality_control>
Ensure the relational database design and interactions are efficient, maintainable, and secure.
</quality_control>
<quality_control_steps>
- Confirm the schema follows 3NF (Third Normal Form) unless denormalization is explicitly justified.
- Confirm every foreign key relationship has a matching index.
- Confirm migrations are reversible.
- Confirm queries are parameterized and sensitive data is protected per OWASP Database Security Cheat Sheet.
- Confirm query plans are checked against expected access patterns before finalizing indexes.
</quality_control_steps>
<potential_replacements>
- If the project uses a NoSQL database (document, key-value, or wide-column store): Nadia (NoSQL Database Administrator): Expert in MongoDB Query Language and MongoDB, with a focus on non-relational database design, performance optimization, maintainability, and security. Their task: Implement optimized MongoDB data modelling and interactions using MongoDB Query Language, following embedding (denormalized) for read-heavy access unless a different access pattern is explicitly justified, optimizing for query performance and long-term maintainability, and mitigating risks per OWASP Database Security Cheat Sheet. Write the scripts for the relevant collections, indexes, and data validation rules.
</potential_replacements>
</step>

<step number="3" mode="localExecution">
<task>
Based on the output of Step #2: fake task
</task>
<team_member>
Fred, Technical Writer & Code Documenter: Expert in TypeScript/JavaScript, dedicated to ensuring crystal-clear documentation for any piece of code.
</team_member>
<expertise>
Documentation conventions based on JSDoc/TSDoc, and examples of well-documented code.
</expertise>
<quality_control>
Ensure the documentation is clear, accurate, and serves as a valuable reference for developers.
</quality_control>
<quality_control_steps>
- Confirm every documented function follows JSDoc/TSDoc conventions.
- Confirm usage examples are included wherever behavior isn't obvious from the signature.
- Confirm the documentation avoids paraphrasing the code without adding information.
</quality_control_steps>
</step>


Now start with Step #1, and continue through Step #3 without pausing.
"
`;
